deploy/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-path
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 3m
spec:
  ingressClassName: nginx
  rules:
    - host: my-path.example.edu
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service: { name: my-path-web, port: { name: http } }
  tls:
    - hosts: [my-path.example.edu]
      secretName: my-path-tls
